--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,42 +9,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-name: Checkout repository
-  uses: actions/checkout@v4
+      - name: Set up JDK 21 (Temurin)
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '21'
+          cache: maven
 
+      - name: Show tool versions
+        run: |
+          java -version
+          mvn -v
 
-name: Set up JDK 21 (Temurin)
-  uses: actions/setup-java@v4
-  with:
-    distribution: temurin
-    java-version: '21'
-    cache: maven
+      - name: Build & run tests
+        run: mvn -B -DtrimStackTrace=true clean install
 
+      - name: Upload surefire reports (unit tests)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: surefire-reports
+          path: '**/target/surefire-reports/**'
+          if-no-files-found: ignore
 
-name: Show tool versions
-  run: |
-    java -version
-    mvn -v
-
-
-name: Build & run tests
-  run: mvn -B -DtrimStackTrace=true clean install
-
-
-name: Upload surefire reports (unit tests)
-  if: always()
-  uses: actions/upload-artifact@v4
-  with:
-    name: surefire-reports
-    path: '*/target/surefire-reports/'
-    if-no-files-found: ignore
-
-
-name: Upload failsafe reports (integration tests)
-  if: always()
-  uses: actions/upload-artifact@v4
-  with:
-    name: failsafe-reports
-    path: '*/target/failsafe-reports/'
-    if-no-files-found: ignore
+      - name: Upload failsafe reports (integration tests)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: failsafe-reports
+          path: '**/target/failsafe-reports/**'
+          if-no-files-found: ignore
